fixed spacing and add dev depen

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -541,6 +541,9 @@ button.expand.finished > .expand-icon > svg.second {
     background: var(--clr-neutral-200);
     border-radius: var(--size-200);
 }
+.a11y-slider-container{
+    padding-bottom: 15px;
+}
 @media (min-width: 53em) {
     .slider > * {
         width: 32%;
@@ -653,7 +656,6 @@ input[type="submit"]:focus-visible {
             opacity: 0;
             transform: translateY(-70px);
             transition: max-height 1s, visibility 1s, opacity 2s, transform 2s;
-            padding-bottom: 12rem;
             /* overflow: hidden; */
         }
 
@@ -663,7 +665,7 @@ input[type="submit"]:focus-visible {
             visibility: visible;
             opacity: 1;
             transform: translateY(0);
-            
+            padding-bottom: 12rem;
         }
 
 
